HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/ImplementationAbstractMethodSignatureMismatch/Source/Main.uv
//! Rejected polymorphism specimen for an abstract class method implementation with mismatched signature.

internal class AbstractSignatureClass {
    internal procedure value(~) -> i32
}

internal record AbstractSignatureOwner <: AbstractSignatureClass {
    internal procedure value(~) -> bool {
        return true
    }
}
